# ProcessEngine

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: scan_benchmark.cpp  scan_benchmark_fixture.hpp  scan_benchmark_target.cpp
docs/: README.md  architecture.md  assembly.md  backends.md  desktop-host.md  getting-started.md  hooks.md  lua.md  patching.md  pointers.md  testing.md  usage.md
host/HexEngine.WebViewTest/: App.xaml  App.xaml.cs  HexEngine.WebViewTest.csproj  MainWindow.xaml  MainWindow.xaml.cs  NativeHexBridge.cs  README.md  WebAssetExtractor.cs
host/HexEngine.WebViewTest/ui/: index.html  package-lock.json  package.json  vite.config.js
host/HexEngine.WebViewTest/ui/src/: App.jsx
host/HexEngine.WebViewTest/www/: index.html
host/HexEngine.WebViewTest/www/assets/: app.js
include/cepipeline/memory/: allocation_manager.hpp  case_insensitive.hpp  pattern.hpp  process_memory.hpp  runtime_memory_model.hpp  symbol_table.hpp
include/hexengine/backend/: process_backend.hpp
include/hexengine/backends/win32/: win32_process_backend.hpp
include/hexengine/core/: case_insensitive.hpp  memory_types.hpp  pattern.hpp
include/hexengine/engine/: address_resolver.hpp  allocation_repository.hpp  allocation_service.hpp  assembly_script.hpp  engine_factory.hpp  engine_session.hpp  patch_repository.hpp  patch_service.hpp  pointer_resolver.hpp  process_scanner.hpp  remote_assembler.hpp  script_context.hpp  symbol_repository.hpp  text_assembler.hpp  win32_engine_factory.hpp
include/hexengine/host/: host_api.h
include/hexengine/lua/: lua_runtime.hpp
scripts/: build-mingw.ps1  build-msvc.ps1  check-mingw-env.ps1  check-msvc-env.ps1  enter-msvc-env.ps1
src/: main.cpp
src/backends/win32/: win32_process_backend.cpp
src/core/: pattern.cpp
src/engine/: address_resolver.cpp  allocation_repository.cpp  allocation_service.cpp  assembly_script.cpp  engine_factory.cpp  engine_session.cpp  name_validation.hpp  patch_repository.cpp  patch_service.cpp  pointer_resolver.cpp  process_scanner.cpp  remote_assembler.cpp  script_context.cpp  symbol_repository.cpp  text_assembler.cpp  write_with_temporary_protection.hpp
src/host/: host_api.cpp
src/lua/: lua_runtime.cpp
src/memory/: allocation_manager.cpp  pattern.cpp  process_memory.cpp  runtime_memory_model.cpp  symbol_table.cpp
tests/: address_resolver_test.cpp  assembly_script_test.cpp  host_api_test.cpp  lua_runtime_test.cpp  memory_integration_cases.cpp  memory_integration_cases.hpp  memory_integration_support.cpp  memory_integration_support.hpp  memory_integration_test.cpp  memory_test_fixture.hpp  memory_test_target.cpp  pattern_test.cpp  remote_assembler_test.cpp  script_context_test.cpp  text_assembler_test.cpp
tests/support/: fake_process_backend.hpp  jump_decode.hpp
